
== Changes since the 2.4.0 release

=== Language changes

* Top-level constant look-up is removed.  [Feature #11547]

* rescue/else/ensure are allowed inside do/end blocks.  [Feature #12906]

=== Core classes updates (outstanding ones only)

* Array

  * Array#append  [Feature #12746]
  * Array#prepend  [Feature #12746]

* Dir

  * Dir.glob provides new optional keyword argument, :base.
    [Feature#13056]

* Integer

  * Integer.sqrt  [Feature #13219]
  * Integer#step does no longer rescue exceptions when given
    a step value which cannot be compared with #> to 0. [Feature #7688]
  * Integer#{round,floor,ceil,truncate} now always return an Integer.
    [Bug #13420]

* IO

  * IO#pread  [Feature #4532]
  * IO#pwrite  [Feature #4532]

* IOError

  * exception message "stream closed" is changed  [Bug #13405]

* Kernel

  * Kernel#yield_self  [Feature #6721]

* Numeric

  * Numerical comparison operators (<,<=,>=,>) no longer rescue exceptions
    of #coerce. Return nil in #coerce if the coercion is impossible.
    [Feature #7688]

* Range
  * Range#initialize no longer rescue exceptions when comparing begin and
    end with #<=> and raise a "bad value for range" ArgumentError
    but instead let the exception from the #<=> call go through.
    [Feature #7688]

* Regexp
  * Update Onigmo 6.1.1.
    * Support absent operator https://github.com/k-takata/Onigmo/issues/82

* Thread

  * Thread#fetch  [Feature #13009]

* String

  * String#-@ deduplicates unfrozen strings.  Already-frozen
    strings remain unchanged for compatibility.  [Feature #13077]
  * -"literal" (String#-@) optimized to return the same object
    (same as "literal".freeze in Ruby 2.1+) [Feature #13295]
  * String#{casecmp,casecmp?} now return nil for non-string arguments
    instead of raising a TypeError. [Bug #13312]

=== Stdlib updates (outstanding ones only)

* Net::HTTP
  * Add more HTTP status classes

  * Net::HTTP::STATUS_CODES is added as HTTP Status Code Repository [Misc #12935]
